--- a/TwatsAppClient/TwatsAppClient/App.xaml
+++ b/TwatsAppClient/TwatsAppClient/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:TwatsAppClient"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="styles/buttons.xaml"/>
+                <ResourceDictionary Source="styles/Input.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
