--- a/TwatsAppClient/TwatsAppClient/MainWindow.xaml
+++ b/TwatsAppClient/TwatsAppClient/MainWindow.xaml
@@ -11,7 +11,6 @@
         Height="600" Width="800" FontFamily="/TwatsAppClient;component/fonts/#Varela Round" FontSize="14">
     <Window.Resources>
         <helpers:BooleanToVisibilityConverter x:Key="BoolToVisibility" />
-        <helpers:InverseBooleanToVisibilityConverter x:Key="InverseBoolToVisibility" />
         <helpers:LastMessageTimeConverter x:Key="LastSeenConverter" />
     </Window.Resources>
     <Grid>
@@ -39,10 +38,10 @@
                                     <RowDefinition Height="auto"/>
                                     <RowDefinition Height="auto"/>
                                 </Grid.RowDefinitions>
-                                <TextBlock FontSize="18" VerticalAlignment="Top" HorizontalAlignment="Left" Text="{Binding Path=User.FullName}"/>
-                                <TextBlock FontSize="12" VerticalAlignment="Top" HorizontalAlignment="Right" Opacity="0.5" Text="{Binding Path=LastMessage.DispatchedAt, Converter={StaticResource LastSeenConverter}}"/>
-                                <TextBlock MaxWidth="250" Grid.Row="1" FontSize="12" VerticalAlignment="Bottom" HorizontalAlignment="Left" Opacity="0.75" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" Text="{Binding Path=LastMessage.Content}"/>
-                                <fa:FontAwesome Grid.Row="1" HorizontalAlignment="Right" Icon="Circle" Opacity="0.5" Foreground="blue" Visibility="{Binding Path=LastMessage.Seen,Converter={StaticResource InverseBoolToVisibility}}" />
+                                <TextBlock FontSize="18" VerticalAlignment="Top" HorizontalAlignment="Left" Text="{Binding User.FullName}"/>
+                                <TextBlock FontSize="12" VerticalAlignment="Top" HorizontalAlignment="Right" Opacity="0.5" Text="{Binding LastMessage.DispatchedAt, Converter={StaticResource LastSeenConverter}}"/>
+                                <TextBlock MaxWidth="250" Grid.Row="1" FontSize="12" VerticalAlignment="Bottom" HorizontalAlignment="Left" Opacity="0.75" TextTrimming="CharacterEllipsis" TextWrapping="NoWrap" Text="{Binding LastMessage.Content}"/>
+                                <fa:FontAwesome Grid.Row="1" HorizontalAlignment="Right" Icon="Circle" Opacity="0.5" Foreground="blue" Visibility="{Binding LastMessage.NotRead,Converter={StaticResource BoolToVisibility}}" />
                             </Grid>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -52,8 +51,21 @@
                     <Grid.Background>
                         <ImageBrush  ImageSource="img/chat_bg.png" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,550,999" Opacity="0.15"/>
                     </Grid.Background>
-                    <StackPanel Grid.Column="1" VerticalAlignment="Stretch">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" VerticalAlignment="Stretch">
                     </StackPanel>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="50"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox Grid.Column="0" Margin="5"></TextBox>
+                        <Button  Grid.Column="1" Margin="5" Cursor="Hand"  fa:Awesome.Content="Send"  Style="{StaticResource btn-primary}" TextElement.FontFamily="pack://application:,,,/FontAwesome.WPF;component/#FontAwesome"/>
+                    </Grid>
+                    
                 </Grid>
                 
             </Grid>
